# chlorophyll

./: .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml
chlorophyll-protocol/: Cargo.toml
chlorophyll-protocol/src/: humidity.rs  lib.rs  light.rs  temperature.rs
chlorophyll-sensor-lib/: Cargo.toml
chlorophyll-sensor-lib/src/: lib.rs
chlorophyll-ui/: Cargo.toml
chlorophyll-ui/examples/: simulate.rs
chlorophyll-ui/src/: display.rs  lib.rs
chlorophyll-ui/src/displays/: binary_250x122.rs  mod.rs
dioxus_client/: Cargo.toml  Dioxus.toml  chlorophyll.db-journal
dioxus_client/assets/: tailwind.css
dioxus_client/assets/styling/: main.css
dioxus_client/src/: api.rs  main.rs  types.rs
dioxus_client/src/components/: hero.rs  line_chart.rs  mod.rs  sensor_list.rs
dioxus_client/src/views/: home.rs  navbar.rs
pico_2w/: Cargo.toml  README.md  config.toml.example  todo.md
pico_2w/.cargo/: config.toml
pico_2w/src/: main.rs  temperature.rs
pico_2w_matter/: Cargo.toml  config.toml.example
pico_2w_matter/src/: main.rs
sensor_server/: Cargo.toml
sensor_server/src/: db.rs  lib.rs  main.rs
tui-client/: Cargo.toml  LICENSE  README.md
tui-client/src/: app.rs  lib.rs  log_widget.rs  main.rs  tracing_layer.rs  ui.rs
tui-client/tests/: integration.rs
