[package]
name = "sensor_server"
version = "0.1.0"
edition = "2024"

[dependencies]
chlorophyll-protocol = { path = "../chlorophyll-protocol/" }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time"] }
chrono = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
